# fastapi-jwt-auth-skeleton

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/api/: base.py
backend/api/v1/: route_auth.py
backend/core/: config.py
backend/core/auth/: crud.py  dependencies.py  utils.py
backend/db/: __init__.py  db_helper.py  session.py
backend/models/: base.py  user.py
backend/schemas/: user.py
backend/services/auth/: utils.py
